--- a/sp-framework/build.gradle
+++ b/sp-framework/build.gradle
@@ -61,13 +61,14 @@ dependencies {
             'org.mybatis:mybatis:3.4.4',
             'org.mybatis:mybatis-spring:1.3.1',
             'com.github.pagehelper:pagehelper:5.0.1',
+            'tk.mybatis:mapper:3.3.9',
             //'org.javassist:javassist:3.21.0-GA',
             //'ognl:ognl:3.1.14',
 
             //servlet
             //'javax.servlet:javax.servlet-api:3.1.0',
     )
-    //compile fileTree(dir: '../library/lib', include: ['ojdbc14.jar'])
+    compile fileTree(dir: '../library/lib', include: ['ojdbc14.jar'])
     testCompile(
             'junit:junit:4.12',
             'org.springframework:spring-test:4.2.3.RELEASE',
