--- a/sp-service-waimai/build.gradle
+++ b/sp-service-waimai/build.gradle
@@ -10,16 +10,19 @@ configurations {
 }
 
 dependencies {
+    compile project(':sp-framework')
+    //compile fileTree(dir: '../library/lib', include: ['ojdbc14.jar'])
+    testCompile(
+            //Mybatis Generator
+            'org.mybatis.generator:mybatis-generator-core:1.3.5',
+            'org.freemarker:freemarker:2.3.23',
+    )
+
     mybatisGenerator 'org.mybatis.generator:mybatis-generator-core:1.3.5'
     mybatisGenerator fileTree(dir: '../library/lib', include: ['ojdbc14.jar'])
     //mybatisGenerator 'mysql:mysql-connector-java:5.1.36'
     //mybatisGenerator 'tk.mybatis:mapper:3.3.2'
 
-    testCompile(
-            //Mybatis Generator
-            'org.mybatis.generator:mybatis-generator-core:1.3.5'
-    )
-    compile fileTree(dir: '../library/lib', include: ['ojdbc14.jar'])
 }
 
 //定义MyBatis代码生成任务
